test/spec/simd/simd_conversions.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_conversions.wast
;;; ARGS*: --enable-simd
(;; STDOUT ;;;
out/test/spec/simd/simd_conversions.wast:988: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.1.wat:1:22: error: unexpected token "i32x4.trunc_sat_f32x4", expected an instr.
  (func (result v128) (i32x4.trunc_sat_f32x4 (v128.const f32x4 0.0 0.0 0.0 0.0)))
                       ^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:991: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.2.wat:1:22: error: unexpected token "i32x4.trunc_s_sat_f32x4", expected an instr.
  (func (result v128) (i32x4.trunc_s_sat_f32x4 (v128.const f32x4 -2.0 -1.0 1.0 ...
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:994: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.3.wat:1:22: error: unexpected token "i32x4.trunc_u_sat_f32x4", expected an instr.
  (func (result v128) (i32x4.trunc_u_sat_f32x4 (v128.const f32x4 -2.0 -1.0 1.0 ...
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:997: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.4.wat:1:22: error: unexpected token "i32x4.convert_f32x4", expected an instr.
  (func (result v128) (i32x4.convert_f32x4 (v128.const f32x4 -1 0 1 2)))
                       ^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1000: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.5.wat:1:22: error: unexpected token "i32x4.convert_s_f32x4", expected an instr.
  (func (result v128) (i32x4.convert_s_f32x4 (v128.const f32x4 -1 0 1 2)))
                       ^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1003: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.6.wat:1:22: error: unexpected token "i32x4.convert_u_f32x4", expected an instr.
  (func (result v128) (i32x4.convert_u_f32x4 (v128.const f32x4 -1 0 1 2)))
                       ^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1007: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.7.wat:1:22: error: unexpected token "i64x2.trunc_sat_f64x2_s", expected an instr.
  (func (result v128) (i64x2.trunc_sat_f64x2_s (v128.const f64x2 0.0 0.0)))
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1010: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.8.wat:1:22: error: unexpected token "i64x2.trunc_sat_f64x2_u", expected an instr.
  (func (result v128) (i64x2.trunc_sat_f64x2_u (v128.const f64x2 -2.0 -1.0)))
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1013: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.9.wat:1:22: error: unexpected token "f64x2.convert_i64x2_s", expected an instr.
  (func (result v128) (f64x2.convert_i64x2_s (v128.const i64x2 1 2)))
                       ^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1016: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.10.wat:1:22: error: unexpected token "f64x2.convert_i64x2_u", expected an instr.
  (func (result v128) (f64x2.convert_i64x2_u (v128.const i64x2 1 2)))
                       ^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1020: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.11.wat:1:22: error: unexpected token "i8x16.narrow_i16x8", expected an instr.
  (func (result v128) (i8x16.narrow_i16x8 (v128.const i16x8 0 0 0 0 0 0 0 0) (v...
                       ^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1023: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.12.wat:1:22: error: unexpected token "i16x8.narrow_i8x16", expected an instr.
  (func (result v128) (i16x8.narrow_i8x16 (v128.const i16x8 0 0 0 0 0 0 0 0) (v...
                       ^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1026: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.13.wat:1:22: error: unexpected token "i16x8.narrow_i8x16_s", expected an instr.
  (func (result v128) (i16x8.narrow_i8x16_s (v128.const i8x16 0 0 0 0 0 0 0 0 0...
                       ^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1029: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.14.wat:1:22: error: unexpected token "i16x8.narrow_i8x16_u", expected an instr.
  (func (result v128) (i16x8.narrow_i8x16_u (v128.const i8x16 0 0 0 0 0 0 0 0 0...
                       ^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1032: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.15.wat:1:22: error: unexpected token "i16x8.narrow_i32x4", expected an instr.
  (func (result v128) (i16x8.narrow_i32x4 (v128.const i16x8 0 0 0 0 0 0 0 0) (v...
                       ^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1035: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.16.wat:1:22: error: unexpected token "i32x4.narrow_i16x8", expected an instr.
  (func (result v128) (i32x4.narrow_i16x8 (v128.const i16x8 0 0 0 0 0 0 0 0) (v...
                       ^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1038: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.17.wat:1:22: error: unexpected token "i32x4.narrow_i16x8_s", expected an instr.
  (func (result v128) (i32x4.narrow_i16x8_s (v128.const i8x16 0 0 0 0 0 0 0 0 0...
                       ^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1041: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.18.wat:1:22: error: unexpected token "i32x4.narrow_i16x8_u", expected an instr.
  (func (result v128) (i32x4.narrow_i16x8_u (v128.const i8x16 0 0 0 0 0 0 0 0 0...
                       ^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1045: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.19.wat:1:22: error: unexpected token "i16x8.widen_low_i8x16", expected an instr.
  (func (result v128) (i16x8.widen_low_i8x16 (v128.const i8x16 0 0 0 0 0 0 0 0 ...
                       ^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1048: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.20.wat:1:22: error: unexpected token "i8x16.widen_low_i16x8_s", expected an instr.
  (func (result v128) (i8x16.widen_low_i16x8_s (v128.const i16x8 0 0 0 0 0 0 0 ...
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1051: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.21.wat:1:22: error: unexpected token "i8x16.widen_low_i16x8_u", expected an instr.
  (func (result v128) (i8x16.widen_low_i16x8_u (v128.const i16x8 0 0 0 0 0 0 0 ...
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1054: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.22.wat:1:22: error: unexpected token "i16x8.widen_high_i8x16", expected an instr.
  (func (result v128) (i16x8.widen_high_i8x16 (v128.const i8x16 0 0 0 0 0 0 0 0...
                       ^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1057: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.23.wat:1:22: error: unexpected token "i8x16.widen_high_i16x8_s", expected an instr.
  (func (result v128) (i8x16.widen_high_i16x8_s (v128.const i16x8 0 0 0 0 0 0 0...
                       ^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1060: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.24.wat:1:22: error: unexpected token "i8x16.widen_high_i16x8_u", expected an instr.
  (func (result v128) (i8x16.widen_high_i16x8_u (v128.const i16x8 0 0 0 0 0 0 0...
                       ^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1063: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.25.wat:1:22: error: unexpected token "i32x4.widen_low_i16x8", expected an instr.
  (func (result v128) (i32x4.widen_low_i16x8 (v128.const i16x8 0 0 0 0 0 0 0 0)))
                       ^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1066: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.26.wat:1:22: error: unexpected token "i16x8.widen_low_i32x4_s", expected an instr.
  (func (result v128) (i16x8.widen_low_i32x4_s (v128.const i32x4 0 0 0 0)))
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1069: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.27.wat:1:22: error: unexpected token "i16x8.widen_low_i32x4_u", expected an instr.
  (func (result v128) (i16x8.widen_low_i32x4_u (v128.const i32x4 0 0 0 0)))
                       ^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1072: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.28.wat:1:22: error: unexpected token "i32x4.widen_high_i16x8", expected an instr.
  (func (result v128) (i32x4.widen_high_i16x8 (v128.const i16x8 0 0 0 0 0 0 0 0)))
                       ^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1075: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.29.wat:1:22: error: unexpected token "i16x8.widen_high_i32x4_s", expected an instr.
  (func (result v128) (i16x8.widen_high_i32x4_s (v128.const i32x4 0 0 0 0)))
                       ^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1078: assert_malformed passed:
  out/test/spec/simd/simd_conversions/simd_conversions.30.wat:1:22: error: unexpected token "i16x8.widen_high_i32x4_u", expected an instr.
  (func (result v128) (i16x8.widen_high_i32x4_u (v128.const i32x4 0 0 0 0)))
                       ^^^^^^^^^^^^^^^^^^^^^^^^
out/test/spec/simd/simd_conversions.wast:1085: assert_invalid passed:
  error: type mismatch in i32x4.trunc_sat_f32x4_s, expected [v128] but got [i32]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1086: assert_invalid passed:
  error: type mismatch in i32x4.trunc_sat_f32x4_s, expected [v128] but got [i64]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1087: assert_invalid passed:
  error: type mismatch in i32x4.trunc_sat_f32x4_u, expected [v128] but got [i32]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1088: assert_invalid passed:
  error: type mismatch in i32x4.trunc_sat_f32x4_u, expected [v128] but got [i64]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1089: assert_invalid passed:
  error: type mismatch in f32x4.convert_i32x4_s, expected [v128] but got [i32]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1090: assert_invalid passed:
  error: type mismatch in f32x4.convert_i32x4_s, expected [v128] but got [i64]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1091: assert_invalid passed:
  error: type mismatch in f32x4.convert_i32x4_u, expected [v128] but got [i32]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1092: assert_invalid passed:
  error: type mismatch in f32x4.convert_i32x4_u, expected [v128] but got [i64]
  000001d: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1094: assert_invalid passed:
  error: type mismatch in i8x16.narrow_i16x8_s, expected [v128, v128] but got [i32, i64]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1095: assert_invalid passed:
  error: type mismatch in i8x16.narrow_i16x8_u, expected [v128, v128] but got [i32, i64]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1096: assert_invalid passed:
  error: type mismatch in i16x8.narrow_i32x4_s, expected [v128, v128] but got [f32, f64]
  0000029: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1097: assert_invalid passed:
  error: type mismatch in i16x8.narrow_i32x4_s, expected [v128, v128] but got [f32, f64]
  0000029: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1099: assert_invalid passed:
  error: type mismatch in i16x8.widen_low_i8x16_s, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1100: assert_invalid passed:
  error: type mismatch in i16x8.widen_high_i8x16_s, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1101: assert_invalid passed:
  error: type mismatch in i16x8.widen_low_i8x16_u, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1102: assert_invalid passed:
  error: type mismatch in i16x8.widen_high_i8x16_u, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1103: assert_invalid passed:
  error: type mismatch in i32x4.widen_low_i16x8_s, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1104: assert_invalid passed:
  error: type mismatch in i32x4.widen_high_i16x8_s, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1105: assert_invalid passed:
  error: type mismatch in i32x4.widen_low_i16x8_u, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1106: assert_invalid passed:
  error: type mismatch in i32x4.widen_high_i16x8_u, expected [v128] but got [f32]
  0000020: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1217: assert_invalid passed:
  error: type mismatch in i32x4.trunc_sat_f32x4_s, expected [v128] but got []
  000001b: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1225: assert_invalid passed:
  error: type mismatch in i32x4.trunc_sat_f32x4_u, expected [v128] but got []
  000001b: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1233: assert_invalid passed:
  error: type mismatch in f32x4.convert_i32x4_s, expected [v128] but got []
  000001b: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1241: assert_invalid passed:
  error: type mismatch in f32x4.convert_i32x4_u, expected [v128] but got []
  000001b: error: OnConvertExpr callback failed
out/test/spec/simd/simd_conversions.wast:1249: assert_invalid passed:
  error: type mismatch in i8x16.narrow_i16x8_s, expected [v128, v128] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1257: assert_invalid passed:
  error: type mismatch in i8x16.narrow_i16x8_s, expected [v128, v128] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1265: assert_invalid passed:
  error: type mismatch in i8x16.narrow_i16x8_u, expected [v128, v128] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1273: assert_invalid passed:
  error: type mismatch in i8x16.narrow_i16x8_u, expected [v128, v128] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1281: assert_invalid passed:
  error: type mismatch in i16x8.narrow_i32x4_s, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1289: assert_invalid passed:
  error: type mismatch in i16x8.narrow_i32x4_s, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1297: assert_invalid passed:
  error: type mismatch in i16x8.narrow_i32x4_u, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1305: assert_invalid passed:
  error: type mismatch in i16x8.narrow_i32x4_u, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1313: assert_invalid passed:
  error: type mismatch in i16x8.widen_high_i8x16_s, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1321: assert_invalid passed:
  error: type mismatch in i16x8.widen_high_i8x16_u, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1329: assert_invalid passed:
  error: type mismatch in i16x8.widen_low_i8x16_s, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1337: assert_invalid passed:
  error: type mismatch in i16x8.widen_low_i8x16_u, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1345: assert_invalid passed:
  error: type mismatch in i32x4.widen_high_i16x8_s, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1353: assert_invalid passed:
  error: type mismatch in i32x4.widen_high_i16x8_u, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1361: assert_invalid passed:
  error: type mismatch in i32x4.widen_low_i16x8_s, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_conversions.wast:1369: assert_invalid passed:
  error: type mismatch in i32x4.widen_low_i16x8_u, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
483/483 tests passed.
;;; STDOUT ;;)
